add update guest status endpoint
